--- a/docs/datatype/10-scrna.ipynb
+++ b/docs/datatype/10-scrna.ipynb
@@ -44,7 +44,6 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "\n",
-    "ln.settings.verbosity = 3  # show hints\n",
     "lb.settings.auto_save_parents = (\n",
     "    False  # don't recurse through ontology hierarchies to speed up CI\n",
     ")"
@@ -106,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.view(schema=\"bionty\", orms=[\"CellType\", \"ExperimentalFactor\", \"Tissue\"])"
+    "ln.view(schema=\"bionty\", registries=[\"CellType\", \"ExperimentalFactor\", \"Tissue\"])"
    ]
   },
   {
@@ -380,6 +379,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.save(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file.add_labels(labels)"
    ]
   },
@@ -521,6 +529,7 @@
    "outputs": [],
    "source": [
     "file.add_labels([lb.settings.species], feature=\"species\")\n",
+    "ln.save(cell_types + efs + tissues)\n",
     "file.add_labels(cell_types + efs + tissues)"
    ]
   },
@@ -538,6 +547,7 @@
    "outputs": [],
    "source": [
     "donors = ln.Label.from_values(conde22.obs[\"donor\"])\n",
+    "ln.save(donors)\n",
     "file.add_labels(donors)"
    ]
   },
@@ -611,7 +621,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = lb.Gene.inspect(pbcm68k.var.index, lb.Gene.symbol)[\"mapped\"]"
+    "validated = lb.Gene.validate(pbcm68k.var.index, lb.Gene.symbol)"
    ]
   },
   {
