--- a/docs/datatype/20-scrna-1.ipynb
+++ b/docs/datatype/20-scrna-1.ipynb
@@ -29,9 +29,7 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "import pandas as pd\n",
-    "import anndata as ad\n",
-    "\n",
-    "ln.settings.verbosity = 3  # show hints"
+    "import anndata as ad"
    ]
   },
   {
