--- a/docs/datatype/10-scrna.ipynb
+++ b/docs/datatype/10-scrna.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Manage scRNA-seq datasets"
+    "# Curate & link scRNA-seq datasets"
    ]
   },
   {
@@ -729,6 +729,15 @@
    "outputs": [],
    "source": [
     "file_pbcm68k.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_pbcm68k.view_lineage()"
    ]
   },
   {
