--- a/docs/datatype/20-scrna-1.ipynb
+++ b/docs/datatype/20-scrna-1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Integrate scRNA datasets based on shared features/metadata"
+    "# Integrate scRNA-seq datasets"
    ]
   },
   {
@@ -107,7 +107,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "file1.view_lineage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file2.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2.view_lineage()"
    ]
   },
   {
