--- a/docs/datatype/20-scrna-1.ipynb
+++ b/docs/datatype/20-scrna-1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Integrate scRNA datasets based on shared features/metadata"
+    "# Integrate scRNA-seq datasets"
    ]
   },
   {
@@ -29,9 +29,7 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "import pandas as pd\n",
-    "import anndata as ad\n",
-    "\n",
-    "ln.settings.verbosity = 3  # show hints"
+    "import anndata as ad"
    ]
   },
   {
@@ -109,7 +107,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "file1.view_lineage()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file2.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file2.view_lineage()"
    ]
   },
   {
