--- a/docs/datatype/10-scrna.ipynb
+++ b/docs/datatype/10-scrna.ipynb
@@ -32,7 +32,14 @@
    },
    "outputs": [],
    "source": [
-    "!lamin init --storage ./test-scrna --schema bionty"
+    "!lamin init --storage ./test-scrna --schema bionty\n",
+    "# avoids download bars\n",
+    "import bionty as bt\n",
+    "\n",
+    "bt.Gene(species=\"human\")\n",
+    "bt.Gene(species=\"mouse\")\n",
+    "bt.Gene(species=\"saccharomyces cerevisiae\")\n",
+    "bt.CellMarker(species=\"human\")"
    ]
   },
   {
@@ -44,9 +51,9 @@
     "import lamindb as ln\n",
     "import lnschema_bionty as lb\n",
     "\n",
-    "lb.settings.auto_save_parents = (\n",
-    "    False  # don't recurse through ontology hierarchies to speed up CI\n",
-    ")"
+    "# don't recurse through ontology hierarchies to speed up CI\n",
+    "# recommend to set to True\n",
+    "lb.settings.auto_save_parents = False"
    ]
   },
   {
@@ -277,9 +284,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -460,9 +465,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -484,7 +487,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The file has the following linked features:"
+    "The file has the following linked feature sets:"
    ]
   },
   {
@@ -507,9 +510,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -522,9 +523,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -681,16 +680,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellType.inspect(pbcm68k_validated.obs[\"cell_type\"], \"name\")"
+    "lb.CellType.inspect(pbcm68k_validated.obs[\"cell_type\"], \"name\");"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -712,9 +709,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
