--- a/docs/datatype/20-scrna-1.ipynb
+++ b/docs/datatype/20-scrna-1.ipynb
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file2_adata.obs.cell_type"
+    "file2_adata.obs.cell_type.head()"
    ]
   },
   {
