--- a/docs/datatype/10-scrna.ipynb
+++ b/docs/datatype/10-scrna.ipynb
@@ -680,7 +680,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellType.inspect(pbcm68k_validated.obs[\"cell_type\"], \"name\");"
+    "lb.CellType.validate(pbcm68k_validated.obs[\"cell_type\"], \"name\");"
    ]
   },
   {
