--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -282,7 +282,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin delete test-scrna\n",
+    "!lamin delete --force test-scrna\n",
     "!rm -r ./test-scrna"
    ]
   }
