--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -308,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.map_synonyms(adata.obs[\"strain\"], return_mapper=True)"
+    "lb.ExperimentalFactor.standardize(adata.obs[\"strain\"], return_mapper=True)"
    ]
   },
   {
@@ -325,7 +325,7 @@
    "outputs": [],
    "source": [
     "adata.obs[\"strain\"] = adata.obs[\"strain\"].map(\n",
-    "    lb.ExperimentalFactor.map_synonyms(adata.obs[\"strain\"], return_mapper=True)\n",
+    "    lb.ExperimentalFactor.standardize(adata.obs[\"strain\"], return_mapper=True)\n",
     ")"
    ]
   },
