--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/birds-eye.ipynb)"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -103,7 +110,18 @@
     "lb.Tissue.from_bionty(ontology_id=\"UBERON:0001542\").save()\n",
     "\n",
     "# cell types\n",
-    "ln.save(lb.CellType.from_values([\"CL:0000115\", \"CL:0000738\"], \"ontology_id\"))"
+    "ln.save(lb.CellType.from_values([\"CL:0000115\", \"CL:0000738\"], \"ontology_id\"))\n",
+    "\n",
+    "# genes\n",
+    "adata = ln.dev.datasets.anndata_mouse_sc_lymph_node()\n",
+    "validated = lb.Gene.bionty(species=\"mouse\").validate(\n",
+    "    adata.var.index, field=\"ensembl_gene_id\"\n",
+    ")\n",
+    "ln.save(\n",
+    "    lb.Gene.from_values(\n",
+    "        adata.var.index[validated], field=\"ensembl_gene_id\", species=\"mouse\"\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -135,13 +153,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
     "lb.settings.species = \"mouse\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extract ![](https://img.shields.io/badge/Extract-059669)"
    ]
   },
   {
@@ -155,14 +178,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata = ln.dev.datasets.anndata_mouse_sc_lymph_node()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Format the metadata columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-input"
+     "hide-cell"
     ]
    },
    "outputs": [],
    "source": [
-    "adata = ln.dev.datasets.anndata_mouse_sc_lymph_node()\n",
     "# The column names are a bit lengthy, let's abbreviate them:\n",
     "adata.obs.columns = (\n",
     "    adata.obs.columns.str.replace(\"Sample Characteristic\", \"\")\n",
@@ -176,35 +214,30 @@
     "    .str.replace(\"cell type\", \"cell_type\")\n",
     "    # the last one could be interesting, too\n",
     "    # .str.replace(\"Factor Value:Ontology Term[inferred cell_type - authors labels\", \"cell_type_authors\")\n",
-    ")\n",
-    "\n",
-    "adata"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When we create a `File` object from an `AnnData`, we'll automatically link its feature sets and get information about unmapped categories:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file = ln.File.from_anndata(\n",
-    "    adata, description=\"Detmar22\", var_ref=lb.Gene.ensembl_gene_id\n",
     ")"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "adata"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're seeing that several gene identifiers can't be validated through Bionty. We'd like to validate all features in this dataset, hence, let's register them:"
+    "### Curate ![](https://img.shields.io/badge/Curate-059669) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validate genes in .var:"
    ]
   },
   {
@@ -213,14 +246,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.save(lb.Gene.from_values(adata.var.index, lb.Gene.ensembl_gene_id))"
+    "validated = lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, for the metadata, we'd like to validate the names:"
+    "We're seeing that 24 gene identifiers can't be validated through Bionty. We'd like to validate all features in this dataset, hence, let's register them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "non_validated = adata.var.index[~validated]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "records = lb.Gene.from_values(non_validated, lb.Gene.ensembl_gene_id)\n",
+    "ln.save(records)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now all genes pass validation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly, for the metadata, we'd like to validate the names as features:"
    ]
   },
   {
@@ -233,7 +308,15 @@
     "    col\n",
     "    for col in adata.obs.columns\n",
     "    if not col.startswith(\"ontology_id\") and not col.startswith(\"Factor Value\")\n",
-    "]\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ln.save(ln.Feature.from_df(adata.obs[columns]))"
    ]
   },
@@ -243,34 +326,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = ln.File.from_anndata(\n",
-    "    adata, description=\"Detmar22\", var_ref=lb.Gene.ensembl_gene_id\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The file now has two linked feature sets:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.features"
+    "ln.Feature.validate(columns, field=\"name\");"
    ]
   },
   {
@@ -283,9 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "species = lb.Species.from_bionty(name=\"mouse\")\n",
@@ -346,16 +400,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.add_labels(species, feature=\"species\")\n",
-    "file.add_labels(strains + dev_stages + tissues + cell_types)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -365,17 +409,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "labels = ln.Label.from_values(adata.obs[\"sex\"])\n",
     "labels += ln.Label.from_values(adata.obs[\"age\"])\n",
     "labels += ln.Label.from_values(adata.obs[\"genotype\"])\n",
-    "labels += ln.Label.from_values(adata.obs[\"immunophenotype\"])"
+    "labels += ln.Label.from_values(adata.obs[\"immunophenotype\"])\n",
+    "ln.save(labels)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Register ![](https://img.shields.io/badge/Register-059669) "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we create a `File` object from an `AnnData`, we'll automatically link its feature sets and get information about unmapped categories:"
    ]
   },
   {
@@ -384,7 +440,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.save(labels)"
+    "file = ln.File.from_anndata(\n",
+    "    adata, description=\"Detmar22\", var_ref=lb.Gene.ensembl_gene_id\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The file now has two linked feature sets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.add_labels(species, feature=\"species\")\n",
+    "file.add_labels(strains + dev_stages + tissues + cell_types)"
    ]
   },
   {
