--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -39,14 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "!lamin init --storage ./test-scrna --schema bionty\n",
-    "# avoids download bars\n",
-    "import bionty as bt\n",
-    "\n",
-    "bt.Gene(species=\"human\")\n",
-    "bt.Gene(species=\"mouse\")\n",
-    "bt.Gene(species=\"saccharomyces cerevisiae\")\n",
-    "bt.CellMarker(species=\"human\")"
+    "!lamin init --storage ./test-scrna --schema bionty"
    ]
   },
   {
@@ -56,11 +49,7 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lnschema_bionty as lb\n",
-    "\n",
-    "# don't recurse through ontology hierarchies to speed up CI\n",
-    "# recommend to set to True\n",
-    "lb.settings.auto_save_parents = False"
+    "import lnschema_bionty as lb"
    ]
   },
   {
@@ -70,67 +59,6 @@
    "outputs": [],
    "source": [
     "ln.track()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Preparation: registries"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's assume that this is not the first time we work with experimental entities, and hence, our registries are already pre-populated:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# assume prepared registries\n",
-    "\n",
-    "# strain\n",
-    "lb.ExperimentalFactor.from_bionty(ontology_id=\"EFO:0004472\").save()\n",
-    "record = lb.ExperimentalFactor.filter(ontology_id=\"EFO:0004472\").one()\n",
-    "record.add_synonym(\"C57BL/6N\")\n",
-    "\n",
-    "# developmental stage\n",
-    "lb.ExperimentalFactor.from_bionty(ontology_id=\"EFO:0001272\").save()\n",
-    "\n",
-    "# tissue\n",
-    "lb.Tissue.from_bionty(ontology_id=\"UBERON:0001542\").save()\n",
-    "\n",
-    "# cell types\n",
-    "ln.save(lb.CellType.from_values([\"CL:0000115\", \"CL:0000738\"], \"ontology_id\"))\n",
-    "\n",
-    "# genes\n",
-    "adata = ln.dev.datasets.anndata_mouse_sc_lymph_node()\n",
-    "validated = lb.Gene.bionty(species=\"mouse\").validate(\n",
-    "    adata.var.index, field=\"ensembl_gene_id\"\n",
-    ")\n",
-    "ln.save(\n",
-    "    lb.Gene.from_values(\n",
-    "        adata.var.index[validated], field=\"ensembl_gene_id\", species=\"mouse\"\n",
-    "    )\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.view(schema=\"bionty\", registries=[\"CellType\", \"ExperimentalFactor\", \"Tissue\"])"
    ]
   },
   {
@@ -164,7 +92,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Extract ![](https://img.shields.io/badge/Extract-059669)"
+    "### Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
+    "\n",
+    "(Here we skip steps of data transformations, which often includes filtering, normalizing, or formatting data.)"
    ]
   },
   {
@@ -181,40 +111,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = ln.dev.datasets.anndata_mouse_sc_lymph_node()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Format the metadata columns:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# The column names are a bit lengthy, let's abbreviate them:\n",
-    "adata.obs.columns = (\n",
-    "    adata.obs.columns.str.replace(\"Sample Characteristic\", \"\")\n",
-    "    .str.replace(\"Factor Value \", \"Factor Value:\", regex=True)\n",
-    "    .str.replace(\"Factor Value\\[\", \"Factor Value:\", regex=True)\n",
-    "    .str.replace(\" Ontology Term\\[\", \"ontology_id:\", regex=True)\n",
-    "    .str.strip(\"[]\")\n",
-    "    .str.replace(\"organism part\", \"tissue\")\n",
-    "    .str.replace(\"organism\", \"species\")\n",
-    "    .str.replace(\"developmental stage\", \"developmental_stage\")\n",
-    "    .str.replace(\"cell type\", \"cell_type\")\n",
-    "    # the last one could be interesting, too\n",
-    "    # .str.replace(\"Factor Value:Ontology Term[inferred cell_type - authors labels\", \"cell_type_authors\")\n",
-    ")"
+    "adata = ln.dev.datasets.anndata_mouse_sc_lymph_node(\n",
+    "    populate_registries=True\n",
+    ")  # pre-populate registries to simulate an used instance"
    ]
   },
   {
@@ -230,14 +129,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Curate ![](https://img.shields.io/badge/Curate-059669) "
+    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Validate genes in .var:"
+    "#### Validate genes in `.var`"
    ]
   },
   {
@@ -253,7 +152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're seeing that 24 gene identifiers can't be validated through Bionty. We'd like to validate all features in this dataset, hence, let's register them:"
+    "We're seeing that 24 gene identifiers can't be validated (not currently in the Gene registry). We'd like to validate all features in this dataset, hence, let's register them:"
    ]
   },
   {
@@ -262,17 +161,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "non_validated = adata.var.index[~validated]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "records = lb.Gene.from_values(non_validated, lb.Gene.ensembl_gene_id)\n",
-    "ln.save(records)"
+    "non_validated = adata.var.index[~validated]\n",
+    "non_validated_records = lb.Gene.from_values(non_validated, lb.Gene.ensembl_gene_id)\n",
+    "ln.save(non_validated_records)"
    ]
   },
   {
@@ -295,45 +186,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, for the metadata, we'd like to validate the names as features:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns = [\n",
-    "    col\n",
-    "    for col in adata.obs.columns\n",
-    "    if not col.startswith(\"ontology_id\") and not col.startswith(\"Factor Value\")\n",
-    "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.save(ln.Feature.from_df(adata.obs[columns]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature.validate(columns, field=\"name\");"
+    "#### Validate metadata in `.obs`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some of the metadata can be typed using dedicated registries:"
+    "Similarly, for the metadata, we'd like to validate them as features:"
    ]
   },
   {
@@ -342,18 +202,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "species = lb.Species.from_bionty(name=\"mouse\")\n",
-    "strains = lb.ExperimentalFactor.from_values(adata.obs[\"strain\"], \"name\")\n",
-    "dev_stages = lb.ExperimentalFactor.from_values(adata.obs[\"developmental_stage\"], \"name\")\n",
-    "cell_types = lb.CellType.from_values(adata.obs[\"cell_type\"], \"name\")\n",
-    "tissues = lb.Tissue.from_values(adata.obs[\"tissue\"], \"name\")"
+    "ln.Feature.validate(adata.obs.columns, ln.Feature.name);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We did not validate strains, hence, let's try to map synonyms:"
+    "None of them exist, so let's register them:"
    ]
   },
   {
@@ -362,14 +218,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.standardize(adata.obs[\"strain\"], return_mapper=True)"
+    "features = ln.Feature.from_df(adata.obs)\n",
+    "ln.save(features)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Indeed, there is a synonym:"
+    "Now they are all validated:"
    ]
   },
   {
@@ -378,16 +235,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata.obs[\"strain\"] = adata.obs[\"strain\"].map(\n",
-    "    lb.ExperimentalFactor.standardize(adata.obs[\"strain\"], return_mapper=True)\n",
-    ")"
+    "ln.Feature.validate(adata.obs.columns, ln.Feature.name);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can validate:"
+    "Some of the metadata labels can be typed using dedicated registries:"
    ]
   },
   {
@@ -396,14 +251,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "strains = lb.ExperimentalFactor.from_values(adata.obs[\"strain\"], \"name\")"
+    "lb.ExperimentalFactor.validate(adata.obs[\"developmental_stage\"], \"name\")\n",
+    "lb.CellType.validate(adata.obs[\"cell_type\"], \"name\")\n",
+    "lb.Tissue.validate(adata.obs[\"tissue\"], \"name\");"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Metadata that doesn't have can't be typed with dedicated registries:"
+    "Metadata that can't be typed with dedicated registries, we use the {class}`~lamindb.Label` registry:"
    ]
   },
   {
@@ -412,18 +269,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = ln.Label.from_values(adata.obs[\"sex\"])\n",
-    "labels += ln.Label.from_values(adata.obs[\"age\"])\n",
-    "labels += ln.Label.from_values(adata.obs[\"genotype\"])\n",
-    "labels += ln.Label.from_values(adata.obs[\"immunophenotype\"])\n",
-    "ln.save(labels)"
+    "ln.Label.validate(adata.obs[\"sex\"], \"name\")\n",
+    "ln.Label.validate(adata.obs[\"age\"], \"name\")\n",
+    "ln.Label.validate(adata.obs[\"genotype\"], \"name\")\n",
+    "ln.Label.validate(adata.obs[\"immunophenotype\"], \"name\");"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Register ![](https://img.shields.io/badge/Register-059669) "
+    "#### Validate external metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In addition to what's already in the file, we'd like to link this file with a feature 'species':"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.Species.validate(\"mouse\", \"name\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Register ![](https://img.shields.io/badge/Register-10b981) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Register data"
    ]
   },
   {
@@ -471,13 +357,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "file.add_labels(species, feature=\"species\")\n",
-    "file.add_labels(strains + dev_stages + tissues + cell_types)"
+    "#### Link metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's add labels to corresponding features:"
    ]
   },
   {
@@ -486,6 +376,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "species = lb.Species.from_values([\"mouse\"], \"name\")[0]\n",
+    "dev_stages = lb.ExperimentalFactor.from_values(adata.obs[\"developmental_stage\"], \"name\")\n",
+    "cell_types = lb.CellType.from_values(adata.obs[\"cell_type\"], \"name\")\n",
+    "tissues = lb.Tissue.from_values(adata.obs[\"tissue\"], \"name\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.add_labels(species, feature=\"species\")\n",
+    "file.add_labels(dev_stages + tissues + cell_types)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = ln.Label.from_values(adata.obs[\"sex\"])\n",
+    "labels += ln.Label.from_values(adata.obs[\"age\"])\n",
+    "labels += ln.Label.from_values(adata.obs[\"genotype\"])\n",
+    "labels += ln.Label.from_values(adata.obs[\"immunophenotype\"])\n",
     "file.add_labels(labels)"
    ]
   },
@@ -516,9 +432,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": [
-     "hide-output"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -526,12 +440,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "conde22 = ln.dev.datasets.anndata_human_immune_cells()"
+    "### Transform ![](https://img.shields.io/badge/Transform-10b981)"
    ]
   },
   {
@@ -540,7 +452,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.save(lb.Gene.from_values(conde22.var.index, lb.Gene.ensembl_gene_id))"
+    "conde22 = ln.dev.datasets.anndata_human_immune_cells(populate_registries=True)"
    ]
   },
   {
@@ -549,9 +461,152 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conde22.obs.columns = conde22.obs.columns.str.replace(\"donor_id\", \"donor\")\n",
-    "columns = [col for col in conde22.obs.columns if \"ontology_term\" not in col]\n",
-    "ln.save(ln.Feature.from_df(conde22.obs[columns]))"
+    "conde22"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.Gene.validate(conde22.var.index, lb.Gene.ensembl_gene_id);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "validated = ln.Feature.validate(conde22.obs.columns, \"name\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2 features are not validated: donor, assay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conde22.obs.loc[:, ~validated].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's register them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = ln.Feature.from_df(conde22.obs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.save(features)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "All metadata columns are now validated:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Feature.validate(conde22.obs.columns, \"name\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.CellType.validate(conde22.obs.cell_type, \"name\")\n",
+    "lb.ExperimentalFactor.validate(conde22.obs.assay, \"name\")\n",
+    "lb.Tissue.validate(conde22.obs.tissue, \"name\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As neither the core schema nor `lnschema_bionty` have a `Donor` table, we're using `Label` to track donor ids.\n",
+    "\n",
+    "Donor labels are not validated, so we register them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Label.validate(conde22.obs[\"donor\"], \"name\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "donors = ln.Label.from_values(conde22.obs[\"donor\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.save(donors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Label.validate(conde22.obs[\"donor\"], \"name\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Register ![](https://img.shields.io/badge/Register-10b981) "
    ]
   },
   {
@@ -621,15 +676,7 @@
    "outputs": [],
    "source": [
     "file.add_labels([lb.settings.species], feature=\"species\")\n",
-    "ln.save(cell_types + efs + tissues)\n",
     "file.add_labels(cell_types + efs + tissues)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As neither the core schema nor `lnschema_bionty` have a `Donor` table, we're using `Label` to track donor ids:"
    ]
   },
   {
@@ -639,7 +686,6 @@
    "outputs": [],
    "source": [
     "donors = ln.Label.from_values(conde22.obs[\"donor\"])\n",
-    "ln.save(donors)\n",
     "file.add_labels(donors)"
    ]
   },
@@ -658,6 +704,13 @@
    "metadata": {},
    "source": [
     "## A less well curated dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transform ![](https://img.shields.io/badge/Transform-10b981)"
    ]
   },
   {
@@ -698,13 +751,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Because gene symbols don't uniquely characterize an Ensembl ID, we're linking more feature records to this file than columns in the `AnnData`.\n",
-    "\n",
-    "```{tip}\n",
-    "\n",
-    "Use Ensembl Gene IDs rather than gene Symbols to index genes.\n",
-    "\n",
-    "```"
+    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
    ]
   },
   {
@@ -729,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Link cell types:"
+    "Validate cell types:"
    ]
   },
   {
@@ -742,6 +789,10 @@
    },
    "outputs": [],
    "source": [
+    "# don't recurse through ontology hierarchies to speed up CI\n",
+    "# recommend to set to True\n",
+    "lb.settings.auto_save_parents = False\n",
+    "\n",
     "# inspect shows none of the terms are mappable\n",
     "lb.CellType.inspect(pbcm68k_validated.obs[\"cell_type\"], \"name\")\n",
     "\n",
@@ -774,6 +825,13 @@
    "outputs": [],
    "source": [
     "lb.CellType.validate(pbcm68k_validated.obs[\"cell_type\"], \"name\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Register ![](https://img.shields.io/badge/Register-10b981) "
    ]
   },
   {
