--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -34,7 +34,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
