--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -108,12 +108,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "adata = ln.dev.datasets.anndata_mouse_sc_lymph_node(\n",
-    "    populate_registries=True\n",
-    ")  # pre-populate registries to simulate an used instance"
+    "    populate_registries=True  # pre-populate registries to simulate an used instance\n",
+    ")"
    ]
   },
   {
@@ -449,10 +453,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
-    "conde22 = ln.dev.datasets.anndata_human_immune_cells(populate_registries=True)"
+    "conde22 = ln.dev.datasets.anndata_human_immune_cells(\n",
+    "    populate_registries=True  # pre-populate registries to simulate an used instance\n",
+    ")"
    ]
   },
   {
