--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -12,7 +12,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Curate & link scRNA-seq datasets"
+    "# Validate & register scRNA-seq datasets"
    ]
   },
   {
