--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/birds-eye.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna.ipynb)"
    ]
   },
   {
@@ -156,7 +156,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're seeing that 24 gene identifiers can't be validated (not currently in the Gene registry). We'd like to validate all features in this dataset, hence, let's register them:"
+    "We're seeing that 45 gene identifiers can't be validated (not currently in the Gene registry). We'd like to validate all features in this dataset, hence, let's register them:"
    ]
   },
   {
@@ -290,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition to what's already in the file, we'd like to link this file with a feature 'species':"
+    "In addition to what's already in the file, we'd like to link this file with external features:"
    ]
   },
   {
@@ -300,6 +300,59 @@
    "outputs": [],
    "source": [
     "lb.Species.validate(\"mouse\", \"name\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try standardizing synonyms that can't be validated:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.ExperimentalFactor.validate(\"scRNA-seq\", \"name\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrna_name = lb.ExperimentalFactor.standardize(\"scRNA-seq\")\n",
+    "scrna_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.ExperimentalFactor.validate(scrna_name, \"name\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrna = lb.ExperimentalFactor(name=scrna_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Feature.validate(\"assay\", \"name\");"
    ]
   },
   {
@@ -393,6 +446,7 @@
    "outputs": [],
    "source": [
     "file.add_labels(species, feature=\"species\")\n",
+    "file.add_labels(scrna, feature=\"assay\")\n",
     "file.add_labels(dev_stages + tissues + cell_types)"
    ]
   },
@@ -685,7 +739,8 @@
    },
    "outputs": [],
    "source": [
-    "file.add_labels([lb.settings.species], feature=\"species\")\n",
+    "file.add_labels(lb.settings.species, feature=\"species\")\n",
+    "file.add_labels(scrna, feature=\"assay\")\n",
     "file.add_labels(cell_types + efs + tissues)"
    ]
   },
@@ -779,7 +834,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbcm68k_validated = pbcm68k[:, validated]"
+    "pbcm68k_validated = pbcm68k[:, validated].copy()"
    ]
   },
   {
@@ -852,7 +907,7 @@
    },
    "outputs": [],
    "source": [
-    "file_pbcm68k = ln.File.from_anndata(\n",
+    "file = ln.File.from_anndata(\n",
     "    pbcm68k_validated, description=\"10x reference pbmc68k\", var_ref=lb.Gene.symbol\n",
     ")"
    ]
@@ -863,7 +918,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_pbcm68k.save()"
+    "file.save()"
    ]
   },
   {
@@ -875,7 +930,7 @@
    "outputs": [],
    "source": [
     "cell_types = lb.CellType.from_values(pbcm68k_validated.obs[\"cell_type\"], \"name\")\n",
-    "file_pbcm68k.add_labels(cell_types)"
+    "file.add_labels(cell_types)"
    ]
   },
   {
@@ -884,7 +939,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_pbcm68k.describe()"
+    "file.add_labels(lb.settings.species, feature=\"species\")\n",
+    "file.add_labels(scrna, feature=\"assay\")"
    ]
   },
   {
@@ -893,7 +949,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_pbcm68k.view_lineage()"
+    "file.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.view_lineage()"
    ]
   },
   {
