--- a/docs/scrna2.ipynb
+++ b/docs/scrna2.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna2.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Integrate scRNA-seq datasets"
    ]
   },
@@ -12,7 +19,7 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
@@ -54,7 +61,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(tissues__name__icontains=\"lymph node\").distinct().df()"
+    "# lookup objects for auto-complete\n",
+    "assays = lb.ExperimentalFactor.lookup()\n",
+    "species = lb.Species.lookup()"
    ]
   },
   {
@@ -63,7 +72,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(cell_types__name__icontains=\"monocyte\").distinct().df()"
+    "query = ln.File.filter(\n",
+    "    experimental_factors=assays.single_cell_rna_sequencing,  # scRNA-seq\n",
+    "    species=species.human,  # human\n",
+    "    cell_types__name__contains=\"monocyte\",  # monocyte\n",
+    ").distinct()"
    ]
   },
   {
@@ -72,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.File.filter(labels__name=\"female\").distinct().df()"
+    "query.df()"
    ]
   },
   {
@@ -88,8 +101,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1 = ln.File.filter(description=\"Conde22\").one()\n",
-    "file2 = ln.File.filter(description=\"10x reference pbmc68k\").one()"
+    "# get file objects\n",
+    "file1, file2 = query.list()"
    ]
   },
   {
@@ -129,13 +142,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "file1_adata = file1.load()\n",
-    "file2_adata = file2.load()"
+    "Load files into memory:"
    ]
   },
   {
@@ -144,7 +154,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file2_adata.obs.cell_type.head()"
+    "file1_adata = file1.load()\n",
+    "file2_adata = file2.load()"
    ]
   },
   {
@@ -164,6 +175,15 @@
     "file2_genes = file2.features[\"var\"]\n",
     "\n",
     "shared_genes = file1_genes & file2_genes\n",
+    "len(shared_genes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "shared_genes.list(\"symbol\")[:10]"
    ]
   },
@@ -180,11 +200,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapper = (\n",
-    "    pd.DataFrame(file2_genes.values_list(\"ensembl_gene_id\", \"symbol\"))\n",
-    "    .drop_duplicates(0)\n",
-    "    .set_index(0)[1]\n",
-    ")\n",
+    "mapper = pd.DataFrame(shared_genes.values_list(\"ensembl_gene_id\", \"symbol\")).set_index(\n",
+    "    0\n",
+    ")[1]\n",
     "mapper.head()"
    ]
   },
@@ -194,7 +212,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file1_adata.var.rename(index=mapper, inplace=True)"
+    "file2_adata.var.rename(index=mapper, inplace=True)"
    ]
   },
   {
@@ -234,19 +252,17 @@
     "file1_adata_subset = file1_adata[\n",
     "    file1_adata.obs[\"cell_type\"].isin(shared_celltypes_names)\n",
     "]\n",
-    "file1_adata_subset.obs[\"cell_type\"].value_counts()"
+    "\n",
+    "file2_adata_subset = file2_adata[\n",
+    "    file2_adata.obs[\"cell_type\"].isin(shared_celltypes_names)\n",
+    "]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "file2_adata_subset = file2_adata[\n",
-    "    file2_adata.obs[\"cell_type\"].isin(shared_celltypes_names)\n",
-    "]\n",
-    "file2_adata_subset.obs[\"cell_type\"].value_counts()"
+    "Concatenate subseted datasets:"
    ]
   },
   {
@@ -282,6 +298,7 @@
    },
    "outputs": [],
    "source": [
+    "# clean up test instance\n",
     "!lamin delete --force test-scrna\n",
     "!rm -r ./test-scrna"
    ]
