--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -53,20 +53,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mouse lymph node cells: Detmar22"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "ln.track()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mouse lymph node cells: Detmar22"
    ]
   },
   {
@@ -81,7 +81,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -156,7 +158,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're seeing that 45 gene identifiers can't be validated (not currently in the Gene registry). We'd like to validate all features in this dataset, hence, let's register them:"
+    "We're seeing that 43 gene identifiers can't be validated (not currently in the Gene registry). We'd like to validate all features in this dataset, hence, let's register them:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "\n",
+    "ensembl_gene_ids that are present in Bionty public ontology will create ontology-coupled records.\n",
+    "\n",
+    "In this example:\n",
+    "- 19 records are created from Bionty with additional metadata and source tracking\n",
+    "- while the rest 24 record are created with a single ensembl_gene_id field\n",
+    "```"
    ]
   },
   {
@@ -222,7 +238,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.from_df(adata.obs)\n",
+    "features = ln.Feature.from_df(\n",
+    "    adata.obs\n",
+    ")  # Feature.from_df create feature records with type auto-populated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ln.save(features)"
    ]
   },
@@ -273,10 +299,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(adata.obs[\"sex\"], \"name\")\n",
-    "ln.Label.validate(adata.obs[\"age\"], \"name\")\n",
-    "ln.Label.validate(adata.obs[\"genotype\"], \"name\")\n",
-    "ln.Label.validate(adata.obs[\"immunophenotype\"], \"name\");"
+    "for col in [\"sex\", \"age\", \"genotype\", \"immunophenotype\"]:\n",
+    "    ln.Label.validate(adata.obs[col], \"name\")"
    ]
   },
   {
@@ -299,7 +323,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.Feature.validate(\"species\", \"name\")\n",
     "lb.Species.validate(\"mouse\", \"name\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Modality.validate(\"rna\", \"name\");"
    ]
   },
   {
@@ -315,6 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.Feature.validate(\"assay\", \"name\")\n",
     "lb.ExperimentalFactor.validate(\"scRNA-seq\", \"name\");"
    ]
   },
@@ -335,24 +370,6 @@
    "outputs": [],
    "source": [
     "lb.ExperimentalFactor.validate(scrna_name, \"name\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scrna = lb.ExperimentalFactor(name=scrna_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature.validate(\"assay\", \"name\");"
    ]
   },
   {
@@ -417,6 +434,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Warning message suggests to assign modality:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_feature_set = file.features.get_feature_set(\"var\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_feature_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modality = ln.Modality.filter(name=\"rna\").one()\n",
+    "var_feature_set.modality = modality\n",
+    "var_feature_set.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Link metadata"
    ]
   },
@@ -445,8 +507,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.add_labels(species, feature=\"species\")\n",
-    "file.add_labels(scrna, feature=\"assay\")\n",
+    "file.add_labels(lb.settings.species, feature=\"species\")\n",
+    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")\n",
     "file.add_labels(dev_stages + tissues + cell_types)"
    ]
   },
@@ -708,6 +770,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "var_feature_set = file.features.get_feature_set(\"var\")\n",
+    "var_feature_set.modality = modality\n",
+    "var_feature_set.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file.features"
    ]
   },
@@ -740,7 +813,7 @@
    "outputs": [],
    "source": [
     "file.add_labels(lb.settings.species, feature=\"species\")\n",
-    "file.add_labels(scrna, feature=\"assay\")\n",
+    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")\n",
     "file.add_labels(cell_types + efs + tissues)"
    ]
   },
@@ -940,7 +1013,27 @@
    "outputs": [],
    "source": [
     "file.add_labels(lb.settings.species, feature=\"species\")\n",
-    "file.add_labels(scrna, feature=\"assay\")"
+    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_feature_set = file.features.get_feature_set(\"var\")\n",
+    "var_feature_set.modality = modality\n",
+    "var_feature_set.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.features"
    ]
   },
   {
